--- a/index.html
+++ b/index.html
@@ -7,22 +7,20 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Tear Animation Elements -->
-    <div class="tear-overlay tear-left"></div>
-    <div class="tear-overlay tear-right"></div>
+    <img id="moving-image" src="https://roim-picx-9nr.pages.dev/rest/eS7rprK.jpeg" alt="Moving Trigger Image">
 
-    <!-- Main Content Area -->
-    <div class="content-wrapper">
-        <!-- Album Cover Sticker Background -->
+    <img id="center-image" src="https://roim-picx-9nr.pages.dev/rest/10BTprK.png" alt="Center Image">
+
+    <div id="reveal-effect-overlay"></div>
+
+    <div id="main-content" class="content-wrapper">
         <div id="sticker-background" class="sticker-background"></div>
 
-        <!-- Central Avatar -->
         <div class="avatar-container">
             <img id="avatar" src="" alt="User Avatar" class="avatar">
         </div>
     </div>
 
-    <!-- Configuration and Main Script -->
     <script src="config.js"></script>
     <script src="script.js"></script>
 </body>
